# 5th_GS

./: .gitignore  CMakeLists.txt  README.md  comp.sh  imgui.ini
AIOBC/: BEE-1000  CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini
UDP/: BEE-1000  CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini
amp/: ampcontrol  ampcontrol.cpp  ampcontrol_origin.cpp  ampoff.cpp  ampoff_origin.cpp
build2/: BEE-1000  CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini  jaaannneee.so.map  jaaannneee.so.tmp  janeyosi.so.map  no.so.map  testjane.so.map  testjane.so.tmp
cmake/: FindFreetype2.cmake  FindSSH.cmake
config/: conf_adsb_client.h  conf_cspclient.h  conf_fp.h  conf_ftp.h  conf_gosh.h  conf_hk.h  conf_log.h  conf_param.h  conf_util.h
conn32/: BEE-1000  CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini
data/BEE1012/: 0609.so.map  0609test.so.map  0610test.so.map  hihi.so.map  please.so.map
data/BEE_Log(prev)/: 25120713_Beacon_success  log--2025-01-25-01-26-31--  log--2025-01-25-01-33-49--  log--2025-01-25-13-53-27--  log--2025-01-25-14-01-23--  log--2025-01-25-14-06-20--  log--2025-01-25-17-03-43--  log--2025-01-25-17-17-21--  log--2025-01-25-17-37-43--  log--2025-01-25-17-40-37--  log--2025-01-25-17-43-21--  log--2025-01-25-18-45-20--  log--2025-01-25-18-53-47--  log--2025-01-25-18-54-23--  log--2025-01-25-19-10-00--  log--2025-01-27-12-14-52--  log--2025-01-27-15-51-46--  log--2025-01-27-15-53-52--  log--2025-01-27-16-12-33--  log--2025-01-27-16-18-55--  (+189 more)
fsw/: 1.sh  dflog_230517.txt  lslog.txt
lib/libftp_client_ryu/: CMakeLists.txt  checksums.sha256  ryu_source_diff.md
lib/libftp_client_ryu/adapter/include/: ryu_ftp_client_adapter.h  ryu_ftp_compat.h  ryu_ftp_connection_diag.h
lib/libftp_client_ryu/adapter/src/: ryu_ftp_client_adapter.c  ryu_ftp_connection_diag.c
lib/libftp_client_ryu/port/client/inc/: ftpnew_client.h  ftpnew_client_config.h
lib/libftp_client_ryu/port/client/src/: ftpnew_client.c  ftpnew_client_crc32.c
lib/libftp_client_ryu/port/config/: ftpnew_config.h  ftpnew_types.h  ftpnew_types_internal.h
original_endian/: BEE-1000  CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini
src/: main.cpp  miman_autopilot.cpp  miman_autopilot.h  miman_coms.cpp  miman_coms.h  miman_config.cpp  miman_config.h  miman_csp.cpp  miman_csp.h  miman_ftp.h  miman_ftpfcd.cpp  miman_ftprdp.cpp  miman_ftprdp_integration.h  miman_imgui.cpp  miman_imgui.h  miman_model.cpp  miman_model.h  miman_orbital.cpp  miman_orbital.h  miman_s_control.cpp  miman_s_control.h  temp.cpp  tmtctest.cpp
(+38955 files in other folders)
